--- a/golink-extension/manifest.json
+++ b/golink-extension/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.1",
   "manifest_version": 3,
   "omnibox": { "keyword": "go" },
-  "permissions": ["declarativeNetRequest"],
+  "permissions": ["declarativeNetRequest", "tabs"],
   "host_permissions": ["http://go/*"],
   "declarative_net_request": {
     "rule_resources": [
@@ -19,6 +19,7 @@
     "service_worker": "background.js"
   },
   "action": {
+    "default_popup": "popup.html",
     "default_icon": {
       "16": "/images/icon16.png",
       "32": "/images/icon32.png",
