--- a/golink-extension/manifest.json
+++ b/golink-extension/manifest.json
@@ -1,11 +1,11 @@
 {
   "name": "Firework Go Link",
   "description": "Navigate to internal links with go/link",
-  "version": "1.21",
+  "version": "1.3",
   "manifest_version": 3,
   "omnibox": { "keyword": "go" },
   "permissions": ["declarativeNetRequest", "tabs"],
-  "host_permissions": ["http://go/*"],
+  "host_permissions": ["http://go/*", "http://b/*"],
   "declarative_net_request": {
     "rule_resources": [
       {
